--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -11,11 +14,14 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^5.1.3",
     "commitizen": "^4.2.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "font-awesome": "^4.7.0",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
     "sass": "^1.51.0",
