--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.30",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
+    "axios": "^0.27.2",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^5.1.3",
     "commitizen": "^4.2.4",
+    "dotenv": "^16.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "font-awesome": "^4.7.0",
@@ -27,8 +31,10 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.1",
     "sass": "^1.51.0",
     "typescript": "^4.6.3",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -56,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "cz-conventional-changelog": "^3.3.0",
